cargo-features = ["rename-dependency"]

[package]
name = "substrate-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
error-chain = "0.12"
fnv = "1.0"
log = "0.4"
parking_lot = "0.4"
futures = "0.1.17"
slog = "^2"
heapsize = "0.4"
substrate-consensus-rhd = { path = "../consensus/rhd" }
codec = { version = "2.1", package = "parity-codec" }
primitives = { path = "../primitives", package = "substrate-primitives" }
runtime_primitives = { path = "../sr-primitives", package = "sr-primitives" }
runtime_api = { path = "../sr-api", package = "sr-api" }
state_machine = { path = "../state-machine", package = "substrate-state-machine" }
trie = { path = "../trie", package = "substrate-trie" }
substrate-telemetry = { path = "../telemetry" }
hash-db = { git = "https://github.com/paritytech/trie" }
kvdb = "0.1"
executor = { path = "../executor", package = "substrate-executor" }

[dev-dependencies]
test_client = { path = "../test-client", package = "substrate-test-client" }
kvdb-memorydb = "0.1"
keyring = { path = "../keyring", package = "substrate-keyring" }
hex-literal = "0.1"
