[package]
name = "sp-stats"
version = "2.0.0-alpha.5"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Crate to collect statistics about reads, writes, and cache hits."
edition = "2018"
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sp-stats"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-std = { version = "2.0.0-alpha.5", default-features = false, path = "../std" }
parking_lot = { version = "0.10.0", optional = true }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0-alpha.5", path = "../../utils/prometheus", optional = true }

[features]
default = [ "std" ]
disable-stats = []
std = [
	"codec/std",
	"sp-std/std",
	"parking_lot",
	"prometheus-endpoint",
]
