[package]
name = "radix-tree"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Radix tree traits and implementations."
license = "Apache-2.0"
categories = [ "no-std" ]
edition = "2018"


[dependencies]
derivative = { version = "2.1", features = ["use_core"] }
smallvec = "1.4.2"
hashbrown = { version = "0.8.0", default-features = false, features = [ "ahash" ] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
parking_lot = { version = "0.10.0", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7.2", features = ["small_rng"] }

[features]
default = []
std = ["parking_lot", "smallvec/write"]
fuzzer = []

[[bench]]
name = "bench"
harness = false
